[package]
name = "prom-cnproc"
description = "Prometheus Linux process exporter"
version = "0.1.0"
authors = ["Serge Smertin <serg.smertin@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
keywords = ["linux", "prometheus"]

[dependencies]
cnproc = "0.2.1"
libc = "0.2.95"
log = "0.4.14"
pretty_env_logger = "0.4.0"
entropy = "0.4.1"
lazy_static = "1.4.0"
metrics-exporter-prometheus = "0.5.0"
metrics = "0.16.0"